# timetrackrs

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  build.rs  diesel.toml  package.json  timetrackrs.service  trbtt.service  update-schemas.sh
.dev-db/: config.sqlite3  extracted.sqlite3  raw_events.sqlite3
.github/: copilot-instructions.md
data/: capture_only_config.json  debug_config.json
data/rules/: .gitignore  default.json
diesel/: raw_events.toml  update-schemas.sh
diesel/config_migrations/2020-12-06-180435_tag-rules/: down.sql  up.sql
diesel/extracted_migrations/2020-11-30-202422_fetcher-cache/: down.sql  up.sql
diesel/extracted_migrations/2020-12-13-231436_init/: up.sql
diesel/raw_events_migrations/2020-01-12-184028_create_activity/: down.sql  up.sql
diesel/raw_events_migrations/2021-01-15-122856_schema/: up.sql
frontend/: .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc  .yarnrc.yml  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  webpack.config.ts
frontend/src/: EntriesTime.tsx  api.ts  ftree.tsx  index.css  main.tsx  plot.tsx  routeTree.gen.ts  routes.tsx  server.d.ts  style.scss  tag-tree.tsx  timeline.tsx  util.ts
frontend/src/api/: client.ts  types.ts
frontend/src/assets/plugins/nucleo/css/: nucleo-svg.css  nucleo.css
frontend/src/assets/scss/argon-dashboard/custom/: _close.scss  _content.scss  _functions.scss  _mixins.scss  _nav.scss  _popover.scss  _reboot.scss  _section.scss  _variables.scss  _vendors.scss
frontend/src/assets/scss/argon-dashboard/custom/alerts/: _alert-dismissible.scss  _alert.scss
frontend/src/assets/scss/argon-dashboard/custom/avatars/: _avatar-group.scss  _avatar.scss
frontend/src/assets/scss/argon-dashboard/custom/badges/: _badge-circle.scss  _badge-dot.scss  _badge.scss
frontend/src/assets/scss/argon-dashboard/custom/buttons/: _button-brand.scss  _button-icon.scss  _button.scss
frontend/src/assets/scss/argon-dashboard/custom/cards/: _card-animations.scss  _card-blockquote.scss  _card-profile.scss  _card-stats.scss  _card.scss
frontend/src/assets/scss/argon-dashboard/custom/charts/: _chart.scss
frontend/src/assets/scss/argon-dashboard/custom/close/: _close.scss
frontend/src/assets/scss/argon-dashboard/custom/custom-forms/: _custom-control.scss  _custom-form.scss  _custom-radio.scss  _custom-toggle.scss
frontend/src/assets/scss/argon-dashboard/custom/dropdowns/: _dropdown.scss
frontend/src/assets/scss/argon-dashboard/custom/footers/: _footer.scss
frontend/src/assets/scss/argon-dashboard/custom/forms/: _form-validation.scss  _form.scss  _input-group.scss
frontend/src/assets/scss/argon-dashboard/custom/headers/: _header.scss
frontend/src/assets/scss/argon-dashboard/docs/: _clipboard-js.scss  _component-examples.scss  _content.scss  _footer.scss  _nav.scss  _prism.scss  _sidebar.scss
frontend/src/assets/scss/react/: _buttons.scss  _mixins.scss  _navbar-dropdown.scss  _navbar.scss  _tables.scss
frontend/src/assets/scss/react/bootstrap/: _spinners.scss
frontend/src/assets/scss/react/plugins/: _plugin-react-datetime.scss
frontend/src/components/: AutosizeInput.tsx  CategorizationModal.tsx  CategoryChart.tsx  CategoryHistoryChart.tsx  CategoryPieChart.tsx  ChooserWithChild.tsx  EntriesTime.tsx  Entry.tsx  EventDetail.tsx  Footer.tsx  Layout.tsx  ModalLink.tsx  Navbar.tsx  Page.tsx  Plot.tsx  ProgressPopup.tsx  RegexEditor.tsx  Routes.tsx  Select.tsx  SingleEventInfo.tsx  SingleNumberValue.tsx  StatCard.tsx  TagBreakdown.tsx  TagRuleEditor.tsx  TagTree.tsx  TimeRangeSelector.tsx  Timeline.tsx  index.ts
frontend/src/lib/: api.ts  categoryColors.ts  formatDuration.ts
frontend/src/pages/: Dashboard.tsx  Header.tsx  Plot.tsx  RuleEditor.tsx  TagTree.tsx  Timeline.tsx  charts.ts
frontend/src/router/: LocationInfo.ts  LocationService.ts  Router.ts  Routes.tsx  Routing.ts  index.ts
frontend/src/router-lib/: LocationInfo.ts  LocationService.ts  Route.ts  Router.ts  Routing.ts  index.ts
frontend/src/router-lib/components/: Link.tsx  NavLink.tsx
frontend/src/routes/: __root.tsx  index.tsx  plot.tsx  router.ts  rule-editor.tsx  rules.tsx  stats.tsx  tag-tree.tsx  timeline.tsx
frontend/src/stores/: appStore.ts  dashboardStore.ts  index.ts  plotStore.ts  ruleEditorStore.ts  tagTreeStore.ts  timelineStore.ts
frontend/src/utils/: format.ts
graphql/: insertTrackerEvents.graphql
migrations/: 20200112184028_create_activity.sql  20201206180435_tag-rules.sql  20201213231436_init.sql  20210115122856_schema.sql  20210328120729_cacheupdate.sql  20210328200350_timechunk.sql  20210328211613_timechunk2.sql  20210328220624_timechunk3.sql  20211126070357_resetcache.sql  20211206175039_resetcache.sql
migrations/2020-01-12-184028_create_activity/: down.sql  up.sql
migrations/2020-11-30-202422_fetcher-cache/: up.sql
migrations/2020-12-05-110335_rowid/: up.sql
migrations/2020-12-06-164415_index/: up.sql
src/: api.rs  api_types.rs  config.rs  database.rs  expand.rs  lib.rs  libxid.rs  models.rs  prelude.rs  progress.rs  progress_handler.rs  sampler.rs  schema.rs  util.rs
src/capture/: app_usage.rs  mod.rs  pc_common.rs  process.rs  winwins.rs  winwins_types.rs  x11.rs  x11_types.rs
src/capture/linux/: mod.rs  network.rs  types.rs  wayland.rs  wayland_types.rs  x11.rs  x11_types.rs
src/capture/macos/: appkit.rs  mod.rs  peripherals.rs  types.rs
src/capture/windows/: mod.rs  types.rs  winwins.rs
src/db/: caching_int_map.rs  datybasy.rs  db_iterator.rs  fetcher_cache.rs  hack.rs  mod.rs  models.rs  schema.rs
src/db/schema/: config.rs  extracted.rs  mod.rs  raw_events.rs
src/events/: mod.rs
src/extract/: fetchers.rs  mod.rs  properties.rs  tag_rules.rs  tags.rs
src/extract/fetchers/: mod.rs  wikidata.rs  youtube.rs
src/graphql/: mod.rs  tracker_events.rs
src/import/: app_usage_sqlite.rs  google_fitness.rs  journald.rs  mod.rs  sleep_as_android.rs  timetrackrs_db.rs  trbtt.rs
src/server/: api_routes.rs  mod.rs  server.rs  warp_util.rs
src/sync/: mod.rs
(+45 files in other folders)
