[package]
authors = ["phiresky <phireskyde+git@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"
name = "timetrackrs"
version = "0.1.0"

[dependencies]
anyhow = "1.0.48"
byteorder = "1.4.3"
chrono = {version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
hex = "0.4.3"
rand = "0.8.4"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = {version = "1.0.72", features = ["preserve_order"]}
sysinfo = "0.23.0"
typescript-definitions = {git = "https://github.com/onelson/typescript-definitions", branch = "no-debug-attrs"}

lazy_static = "1.4.0"

addr = "0.15.1"
ansi-escapes = "0.1.1"
async-channel = "1.6.1"
async-trait = "0.1.51"
base64 = "0.13.0"
battery = "0.7.8"
bzip2 = "0.4.3"
chrono-tz = "0.6.0"
concat-reader = "0.1.0"
crc32fast = "1.2.2"
csv = "1.1.6"
datachannel = {version = "0.7.2", features = ["static"], optional = true}
derive_more = "0.99.16"
directories-next = "2.0.0"
enum-utils = "0.1.2"
enum_dispatch = "0.3.7"
env_logger = "0.9.0"
futures = "0.3.18"
futures-channel = "0.3.18"
futures-util = "0.3.18"
gethostname = "0.2.1"
hyper = "0.14.15"
hyper-rustls = "0.23.0"
hyper-tls = "0.5.0"
itertools = "0.10.1"
lru = {version = "0.7.0"}# https://github.com/jeromefroe/lru-rs/pull/40
md5 = "0.7.0"
mediawiki = "0.2.7"
mime_guess = "2.0.3"
multimap = "0.8.3"
num_enum = "0.5.4"
openssl = "0.10.38"
os_info = "3.0.8"
owning_ref = "0.4.1"
paste = "1.0.6"
regex = "1.5.4"
rsa = "0.5.0"
rust-crypto = "0.2.36"
rust-embed = {version = "6.2.0", features = ["compression"]}
rustc-hash = "1.1.0"
serde_regex = "1.1.0"
sqlx = {version = "0.5.1", features = ["sqlite", "any", "runtime-tokio-native-tls", "json"], git = "https://github.com/phiresky/sqlx"}
structopt = "0.3.25"
tar = "0.4.37"
tempfile = "3.2.0"
tokio = {version = "1.14.0", features = ["full"]}
tokio-stream = {version = "0.1.8", features = ["sync"]}
tokio-timer = "0.2.13"
tokio-tungstenite = "0.16.0"
tracing = {version = "0.1.29", features = ["log"]}
tracing-appender = "0.2.0"
tracing-subscriber = {version = "0.3.3", features = ["env-filter"]}
tungstenite = "0.16.0"
url = "2.2.2"
user-idle = "0.5.0"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
warp = {version = "0.3.2", features = ["compression"]}
whoami = "1.2.1"
wmi = "0.9.2"
youtube_dl = "0.7.0"
yup-oauth2 = "6.0.0"
zip = "0.5.13"
zstd = "0.9.0"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["winuser", "processthreadsapi", "handleapi", "psapi"]}

[target.'cfg(target_os="linux")'.dependencies]
nl80211 = {git = "https://github.com/Eonm/nl80211", branch = "master"}
x11rb = {version = "0.9.0", features = ["screensaver"]}
xcb = "0.10.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.2"
core-graphics = "0.22.3"
libc = "0.2.113"
objc = "0.2.7"

[features]
openssl-vendored = ["openssl/vendored"]
sync = ["datachannel"]

[profile.dev.package."*"]
opt-level = 3

#lto="fat"
[profile.release]
debug = true # keep debug info in release build

[[bin]]
name = "trbtt-sync"
required-features = ["sync"]

[[bin]]
name = "trbtt-signalling-server"
required-features = ["sync"]
