[package]
authors = ["phiresky <phireskyde+git@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-or-later"
name = "timetrackrs"
version = "0.1.0"

[dependencies]
anyhow = "1.0.79"
byteorder = "1.5.0"
chrono = {version = "0.4.31", features = ["serde"]}
dotenv = "0.15.0"
hex = "0.4.3"
rand = "0.8.5"
serde = {version = "1.0.194", features = ["derive"]}
serde_json = {version = "1.0.111", features = ["preserve_order"]}
sysinfo = "0.30.4"
typescript-definitions = {git = "https://github.com/onelson/typescript-definitions", branch = "no-debug-attrs"}

lazy_static = "1.4.0"

addr = "0.15.6"
ansi-escapes = "0.1.1"
async-channel = "2.1.1"
async-trait = "0.1.77"
base64 = "0.21.5"
battery = "0.7.8"
bzip2 = "0.4.4"
chrono-tz = "0.8.5"
concat-reader = "0.1.0"
crc32fast = "1.3.2"
csv = "1.3.0"
datachannel = {version = "0.11.2", optional = true}
derive_more = "0.99.17"
directories-next = "2.0.0"
enum-utils = "0.1.2"
enum_dispatch = "0.3.12"
env_logger = "0.10.1"
futures = "0.3.30"
futures-channel = "0.3.30"
futures-util = "0.3.30"
gethostname = "0.4.3"
hyper = "1.1.0"
hyper-rustls = "0.24.2"
hyper-tls = "0.6.0"
itertools = "0.12.0"
lru = {version = "0.12.1"}# https://github.com/jeromefroe/lru-rs/pull/40
md5 = "0.7.0"
mediawiki = "0.2.11"
mime_guess = "2.0.4"
multimap = "0.9.1"
num_enum = "0.7.1"
openssl = "0.10.62"
os_info = "3.7.0"
owning_ref = "0.4.1"
paste = "1.0.14"
regex = "1.10.2"
rsa = "0.9.6"
rust-crypto = "0.2.36"
rust-embed = {version = "8.2.0", features = ["compression"]}
rustc-hash = "1.1.0"
serde_regex = "1.1.0"
sqlx = {version = "0.7.3", features = ["sqlite", "any", "runtime-tokio-native-tls", "json"], git = "https://github.com/phiresky/sqlx.git"}
structopt = "0.3.26"
tar = "0.4.40"
tempfile = "3.9.0"
tokio = {version = "1.35.1", features = ["full"]}
tokio-stream = {version = "0.1.14", features = ["sync"]}
tokio-timer = "0.2.13"
tokio-tungstenite = "0.21.0"
tracing = {version = "0.1.40", features = ["log"]}
tracing-appender = "0.2.3"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
tungstenite = "0.21.0"
url = "2.5.0"
user-idle = "0.6.0"
uuid = {version = "1.6.1", features = ["serde", "v4"]}
warp = {version = "0.3.6", features = ["compression"]}
whoami = "1.4.1"
wmi = "0.13.1"
youtube_dl = "0.9.0"
yup-oauth2 = "8.3.2"
zip = "0.6.6"
zstd = "0.13.0"
wayland-protocols-wlr = {version = "0.3.9", features = ["client"]}

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["winuser", "processthreadsapi", "handleapi", "psapi"]}

[target.'cfg(target_os="linux")'.dependencies]
nl80211 = {git = "https://github.com/Eonm/nl80211", branch = "master"}
x11rb = {version = "0.13.0", features = ["screensaver"]}
xcb = "1.3.0"
wayland-client = "0.31.11"
wayland-protocols = { version = "*", features = ["staging", "client"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.4"
core-graphics = "0.23.1"
libc = "0.2.151"
objc = "0.2.7"

[features]
openssl-vendored = ["openssl/vendored"]
sync = ["datachannel"]

[profile.dev.package."*"]
opt-level = 3

#lto="fat"
[profile.release]
debug = true # keep debug info in release build

[[bin]]
name = "trbtt-sync"
required-features = ["sync"]

[[bin]]
name = "trbtt-signalling-server"
required-features = ["sync"]
