[package]
authors = ["phiresky <phireskyde+git@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-or-later"
name = "timetrackrs"
version = "0.1.0"

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
chrono = {version = "0.4.42", features = ["serde"]}
hex = "0.4.3"
rand = "0.9.2"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = {version = "1.0.145", features = ["preserve_order"]}
sysinfo = "0.37.1"
typescript-definitions = {git = "https://github.com/onelson/typescript-definitions", branch = "no-debug-attrs"}

lazy_static = "1.5.0"

addr = "0.15.6"
async-trait = "0.1.89"
base64 = "0.22.1"
battery = "0.7.8"
bzip2 = "0.6.0"
chrono-tz = "0.10.4"
crc32fast = "1.5.0"
csv = "1.3.1"
datachannel = {version = "0.15.0", optional = true}
derive_more = {version ="2.0.1", features = ["full"] }
directories-next = "2.0.0"
enum_dispatch = "0.3.13"
env_logger = "0.11.8"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
gethostname = "1.0.2"
hyper = "1.7.0"
hyper-tls = "0.6.0"
itertools = "0.14.0"
md5 = "0.8.0"
mediawiki = "0.3.1"
mime_guess = "2.0.5"
num_enum = "0.7.4"
openssl = "0.10.73"
os_info = "3.12.0"
regex = "1.11.3"
rust-embed = {version = "8.7.2", features = ["compression"]}
serde_regex = "1.1.0"
sqlx = {version = "0.7.3", features = ["sqlite", "any", "runtime-tokio-native-tls", "json"], git = "https://github.com/phiresky/sqlx.git"}
structopt = "0.3.26"
tokio = {version = "1.47.1", features = ["full"]}
tokio-stream = {version = "0.1.17", features = ["sync"]}
tokio-tungstenite = "0.28.0"
tracing = {version = "0.1.41", features = ["log"]}
tracing-appender = "0.2.3"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
tungstenite = "0.28.0"
url = "2.5.7"
uuid = {version = "1.18.1", features = ["serde", "v4"]}
warp = {version = "0.3", features = ["compression"]}
whoami = "1.6.1"
youtube_dl = "0.10.0"
zip = "5.1.1"
zstd = "0.13.3"
wayland-protocols-wlr = {version = "0.3.9", features = ["client"]}

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["winuser", "processthreadsapi", "handleapi", "psapi"]}

[target.'cfg(target_os="linux")'.dependencies]
nl80211 = {git = "https://github.com/Eonm/nl80211", branch = "master"}
x11rb = {version = "0.13.2", features = ["screensaver"]}
wayland-client = "0.31.11"
wayland-protocols = { version = "*", features = ["staging", "client"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
core-graphics = "0.25.0"
libc = "0.2.176"
objc = "0.2.7"

[features]
openssl-vendored = ["openssl/vendored"]
sync = ["datachannel"]
export-typescript = []

[profile.dev.package."*"]
opt-level = 3

#lto="fat"
[profile.release]
debug = true # keep debug info in release build

[[bin]]
name = "trbtt-sync"
required-features = ["sync"]

[[bin]]
name = "trbtt-signalling-server"
required-features = ["sync"]
